# python-project-50

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: PyCI.yml
code/: gendiff.py
code/formatters/: all_formatters.py  json_formatter.py  plain.py
code/scripts/: main.py
gendiff/: __init__.py  gendiff.py  generate_diff.py  parser.py
gendiff/formatters/: all_formatters.py  formater_plain.py  formatter_json.py  json.py  json_formatter.py  plain.py  stylish.py
gendiff/run/: gendiff.py  parser.py
gendiff/scripts/: gendiff.py  main.py
tests/: test_generate_diff.py
tests/fixtures/: types.py
tests/fixtures/results/: jsonflat.txt  make_diff.txt  nestedjson.txt  stylish.txt
