[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["AlexStrrr <alex.hrtnv@gmail.com>"]
readme = "README.md"
packages = [{include = "gendiff"}]
classifiers = [
    "Programming Language :: Python :: 3.8",
    "Topic :: Education"]
repository = "https://github.com/AlexStrrr/python-project-50.git"

[tool.poetry.dependencies]
python = "^3.10"
PyYAML = "^6.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
flake8 = "^6.0.0"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
gendiff = "code.scripts.main:main"
